<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--
        <TextView
            android:id="@+id/textView6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/ie3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/notific"
            android:padding="20dp"
            android:background="@color/button_material_light"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView6"
            android:id="@+id/relat">

            <TextView
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rnotific"
                android:textStyle="bold"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:padding="20dp"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nswitch"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

-->
        <TextView
        android:id="@+id/textView5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/defrys"
            android:textColor="@color/ie3"
        android:padding="20dp"
            android:background="@color/button_material_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtregion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/txtregion" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/region"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/txtsection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:padding="8dp"
                    android:textStyle="bold"
                    android:text="@string/txtsection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:id="@+id/section"/>
            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtchangeregion"
                android:id="@+id/changeregsec"
                android:layout_gravity="right"/>

        </LinearLayout>

</RelativeLayout>