<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:orientation="vertical"
                android:id="@+id/meet_barcolor"
                android:background="#f23421"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/meettitle"
                android:text="sdgr"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:padding="16dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/imglay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="128dp"
                        android:layout_height="128dp"
                        android:textColor="@color/sw3"
                        android:text="Num"
                        android:gravity="center"
                        android:layout_marginStart="30dp"
                        android:layout_marginLeft="30dp"
                        android:background="@drawable/calend"
                        android:textSize="50sp"
                        android:id="@+id/txtday"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/background_light"
                        android:layout_marginTop="5dp"
                        android:text="Month"
                        android:id="@+id/txtmo"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_toRightOf="@id/imglay"
                    android:layout_toEndOf="@id/imglay"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">

                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/date"
                            android:padding="4dp"/>

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:id="@+id/meetfecha"/>

                    </LinearLayout>
                    <LinearLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:text="@string/virtual"
                            android:padding="4dp"/>

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:id="@+id/meetvirtual" />

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/meetmap"
                    android:text="@string/details"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_gravity="right" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>